2007/11/13
	In KwsGraphicRoadmap, nodes are now displayed by a cube.
	Minor Changes.
2007/11/09
	Modification of KwsGraphicRoadmap to allow drawing of each joint's
	roadmap separately. Joints that will be drawn are selected via their
	displayPath property

2007/11/07
	Reorganization of header files to solve some compilation problems.

kppInterface 1.1 released October 10, 2007
	
2007/10/09
	17. Modify kppInterface.pc.in to take into account the fact that libkppInterface.* is now installed in $(prefix)/lib/module/$(LICENSE_HOST).

2007/09/29
	16. CkppInterface is not abstract anymore. As a consequence, this packages implements a minimal KPP module.
	
2007/09/21
	15. Migrate "start corba server" command from kppInterfaceWalk to kppInterface
	14. Added ON_IDLE notification to handle CORBA requests according to new hppCorbaServer thread policy.
	
2007/09/07
	13. Correction in notification treatment: adding an obstacle is now different from inserting a new list of obstacles.
	12. Assemblies are now supported.
	
kppInterface 1.0 released August 27th, 2007

	11. Replaced ChppDevice by CkppDeviceComponent since 
	  a. ChppDevice derives from CkppDeviceComponent and
	  b. the operations performed on objects of this type only concern
	     CkppDeviceComponent part.
	10. Notification deactivated before inserting each robot body in geometry node.
	9. Minor changes in documentation
	8. Correct the segfault at deletion of a hidden roadmap.
	7. Resolving problems with notifications.
	6. Adding Class CkwsGraphicRoadmap to replace CkwsPlusRoadmap. To
	   use it, just create an instance giving your CkwsRoadmap.
	5. Correct a bug when adding Device in Model tree
	4. Generate doxytag file in order to make documentation of this
	   package available to depending packages.
	3. Documentation is now generated at installation.
	2. Remove reference to hppCore contained in hppCorbaServer.
	1. New general KineoPathPlanner interface that deals with common