@@ -18,6 +18,8 @@ AC_SUBST(LICENCE_HOST)
 PKG_CHECK_MODULES(KINEOPATHPLANNER, KineoPathPlanner)
 KINEOPATHPLANNER_PREFIX=`$PKG_CONFIG KineoPathPlanner --variable=prefix`
 AC_SUBST(KINEOPATHPLANNER_PREFIX)
+AC_SUBST(KINEOPATHPLANNER_CFLAGS)
+AC_SUBST(KINEOPATHPLANNER_LIBS)
 
 AC_SUBST(KINEO_ADDON_BUILD,[${KINEOPATHPLANNER_PREFIX}/bin/KineoAddonBuilder])
 AC_SUBST(KINEO_MODULE_DIR,["x${KINEOPATHPLANNER_PREFIX}/modules"])
